2000-12-13  Philip Aston  <paston@beasys.com>

	* Grinder 0.7 is released.

	* All java files: 
		Alter the javadoc headers to use cvs info for @version.

	* build.bat: 
	* build.sh: 
	* etc/build.xml:
	* etc/javadoc.css:
	* etc/setenv.sh
	* README
		Use Ant to build everything.
	

2000-12-11  Philip Aston  <paston@beasys.com>

	* Grinder 0.6 is released.

	* GrinderProcess.java:
		Alter the message sent to the console.
	
	* MethodStatistics.java (getDelta): 
		Do the calculation the right way around.

	* Console.java:
	* GraphStatInfo.java:
	* MsgReader.java:
		Show all the methods in the method list. Remove bogus TPS,
		graph ART until I rework the TPS calculation.

	* makeDistrib.sh: Don't distribute classes hierarchy.

	* MethodStatistics.java: 
	* MethodStatisticsTable.java:
		Fix statistics totals reporting.

2000-12-10  Philip Aston  <paston@beasys.com>

	* Grinder 0.5 is released.

	* Major rework of process code and plugin interface.

2000-12-07  Philip Aston  <paston@beasys.com>

	* Grinder version 0.4 is released.

	* Distribute as jar instead of tar.gz.

	* Add COPYING.

2000-12-05  Philip Aston  <paston@beasys.com>

	* Grinder version 0.3 is released.

2000-12-04  Philip Aston  <paston@beasys.com>

	* SnifferServlet.java: Separate post data parameters with &.

2000-12-02 Philip Aston <paston@beasys.com>

	* Grinder version 0.2 is released.

2000-12-02 Philip Aston <paston@beasys.com>

	* Added WebAppSnifferServlet.

2000-12-01 Philip Aston <paston@beasys.com>

	* Grinder version 0.2 is released.

2000-12-01 Philip Aston <paston@beasys.com>	

	* Reorgansised distribution and repackaged:
		net.grinder
		net.grinder.console
		net.grinder.engine
		net.grinder.plugin
		net.grinder.plugin.http
		net.grinder.plugin.http.tools
		net.grinder.plugin.simple
		net.grinder.plugin.weblogic
		net.grinder.plugin.weblogic.ejb
		net.grinder.plugin.weblogic.util

	* Renamed *Bmk.java to *Plugin.java

	* GrinderProcess.java: Used isAssignableFrom to check plugin,